# dual-controller_model_figures

./: README.md  generate_figures.ipynb  generate_figures.py  setup.cfg
data/: Inactivation_Dorsal_t1000_4weight_actor_2000timesteps.csv  Inactivation_Dorsal_t1000_reward_100trails_2000timesteps.csv  Inactivation_Dorsal_t100_reward_100trails_2000timesteps.csv  Inactivation_Dorsal_t10_reward_100trails_2000timesteps.csv  Inactivation_Dorsal_t30_reward_100trails_2000timesteps.csv  Inactivation_Tail_t1000_reward_100trails_2000timesteps.csv  Inactivation_Tail_t100_reward_100trails_2000timesteps.csv  Inactivation_Tail_t10_reward_100trails_2000timesteps.csv  Inactivation_Tail_t30_reward_100trails_2000timesteps.csv  Intact_4weight_actor_1000timesteps.csv  Intact_4weight_critic_1000timesteps.csv  Intact_4weight_tail_100trails_1000timesteps.csv  Intact_reward_100trails_1000timesteps.csv  NoDorsal_4weight_actor_1000timesteps.csv  NoDorsal_4weight_tail_100trails_1000timesteps.csv  NoDorsal_reward_100trails_1000timesteps.csv  NoTail_4weight_actor_1000timesteps.csv  NoTail_4weight_critic_1000timesteps.csv  NoTail_reward_100trails_1000timesteps.csv
data/data_complete/: reward_100trails_500timesteps.csv  weight1_RPE_100trails_500timesteps.csv  weight1_tail_left_100trails_500timesteps.csv  weight1_tail_right_100trails_500timesteps.csv  weight2_RPE_100trails_500timesteps.csv  weight2_tail_left_100trails_500timesteps.csv  weight2_tail_right_100trails_500timesteps.csv
data/inactivations/: Inactivation_APE_at_0_reward_100trails_500timesteps.csv  (+9 more)
(+10 files in other folders)
