[metadata]
# This is required for any package to install with a name
name = dual_controller_model_figures
# If you want to publish on PyPI then the following are also required
# Either (author and author_email) or (maintainer and maintainer_email) must be supplied
# url = 
# author = 
# author_email = 
# # This is useful but not required
# version = 

# If you are using the "src" layout then we need the following
[options]
package_dir=
    =src
packages=find:
install_requires = 
    numpy
    matplotlib
    pandas

[options.packages.find]
where=src